--- a/Ksign.plist
+++ b/Ksign.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ipa.ipasign.cc/download_ipa/8efce75e75cc</string>
+					<string>https://github.com/retroxd8-cmd/upgraded-garbanzo/blob/main/signed_m2cwffahT4N0.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
